--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,5 @@
 body {
-  font-family: 'HelveticaNeue-Light', 'Helvetica Neue Light', 'Helvetica Neue',
-    Helvetica, Arial, 'Lucida Grande', sans-serif;
+  font-family: "Varela Round", sans-serif;
   font-weight: 300;
   font-size: 16px;
   margin: 0;
