--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,6 @@
+@import "~skeleton-css/css/normalize.css";
+@import "~skeleton-css/css/skeleton.css";
+
 body {
   font-family: "Varela Round", sans-serif;
   font-weight: 300;
