--- a/src/App.scss
+++ b/src/App.scss
@@ -2,34 +2,14 @@
 @import "~skeleton-css/css/skeleton.css";
 
 body {
+  background-color: #f9f9f9;
   font-family: "Varela Round", sans-serif;
-  font-weight: 300;
-  font-size: 16px;
-  margin: 0;
-  padding: 0;
 }
 
-a {
-  text-decoration: none;
-  color: #108db8;
-  font-weight: bold;
-}
+// TODO: No separate classes for these, use e.g. mixin for media query:
 
-img {
-  max-width: 100%;
-}
-
-nav {
-  width: 100%;
-  background: #108db8;
-}
-
-nav a {
-  color: white;
-  padding: 1rem;
-  display: inline-block;
-}
-
-.content {
-  padding: 1rem;
+@media (max-width: 550px) {
+  .text-align-center-small {
+    text-align: center;
+  }
 }
