--- a/src/pages/Home/Header.scss
+++ b/src/pages/Home/Header.scss
@@ -1,10 +1,38 @@
+@import '../../variables';
+
 .pages-home-header {
-  & h2 {
+  margin-top: 15%;
+
+  h2 {
     font-weight: bold;
-    margin-top: 15%;
   }
 
-  p {
+  p:not(:last-child) {
     margin-bottom: 0.5rem;
   }
+
+  p:last-child {
+    margin-bottom: 2rem;
+  }
+
+  &-social-links {
+    display: flex;
+    justify-content: left;
+    
+    a {
+      font-size: 3em;
+      margin-right: 1em;
+    }
+  }
+
+  @media (max-width: $media-breakpoint-small) {
+    &-social-links {
+      justify-content: space-around;
+
+      a {
+        margin: 0;
+      }
+    }
+  }
+
 }
