--- a/src/pages/Home/Header.scss
+++ b/src/pages/Home/Header.scss
@@ -4,7 +4,8 @@
   margin-top: 15%;
 
   h2 {
-    font-weight: bold;
+    letter-spacing: 0.1625em;
+    text-transform: uppercase;
   }
 
   p:not(:last-child) {
