--- a/src/pages/Home/Header.scss
+++ b/src/pages/Home/Header.scss
@@ -2,7 +2,7 @@
 
 .pages-home-header {
   margin-top: 6rem;
-  margin-bottom: 5rem;
+  margin-bottom: 3rem;
   text-align: center;
 
   h2 {
@@ -12,12 +12,12 @@
     text-transform: uppercase;
   }
 
-  p:not(:last-child) {
+  p {
     margin-bottom: 0.5rem;
-  }
 
-  p:last-child {
-    margin-bottom: 2rem;
+    &:first-child, &:last-child {
+      margin-bottom: 2rem;
+    }
   }
 
   &-social-links {
